# pgm

./: LICENSE  Makefile  Makefile.am  Makefile.in  README.md  config.status  jane.c  minerd  scrypt.c
.deps/: minerd-scrypt.Po
autom4te.cache/: requests
compat/: Makefile
compat/jansson/: Makefile
scrypt-jane/: scrypt-jane.c
